Added ros distors as mermaid

--- a/site/assets/css/extra.css
+++ b/site/assets/css/extra.css
@@ -1,1 +1,4 @@
 @import "extensions/tabbed.css";
+.mermaid .task {
+    margin-bottom: 2220px; /* Adjust the value to increase the space between tasks */
+}
